# the_convoy

./: .gitignore  README.md  README_Software.md  initNav.sh  launch_follower_bot.sh  launch_leader_bot.sh  launch_robot.sh  pathplanner_node.py
ARCHIVED (NO LONGER USED)/NO LONGER USED motor_control_WIP/src/my_teleop_pkg/: CMakeLists.txt
ARCHIVED (NO LONGER USED)/NO LONGER USED motor_control_WIP/src/my_teleop_pkg/src/: teleop_twist_keyboard.cpp
NO LONGER USED human_detection_node_gazebo/yolo_person_detector/: package.xml
human_detection_node_package_non_gazebo/: usefulcommands.txt
pathplanning/: pathplanning.py  rotation.cpp  rotation.h
perception/notebooks/: data_augmentation.ipynb  data_augmentation.py  human_detection.ipynb
perception/scripts-raw/: color_det.py
src/color_detection/: package.xml  setup.py  usefulcommands.txt
src/control_coordinator/: package.xml  setup.cfg  setup.py
src/my_pathplanner/: package.xml  setup.cfg  setup.py
src/my_teleop_pkg/: usefulcommands.txt
src/teleop_balls/: CMakeLists.txt  package.xml
src/teleop_balls/src/: teleop_balls.cpp
src/yolo_balls_detector/: package.xml  setup.cfg  setup.py
src/yolo_depth_node/: package.xml  setup.cfg  setup.py
src/yolo_person_detector/: setup.py
src/yolo_vest_detector/: package.xml  setup.cfg  setup.py
training_data/: data_augmentation.ipynb  data_augmentation.py  human_detection.ipynb
training_data/xmls/: bot_10.xml  bot_12.xml  bot_13.xml  bot_14.xml  bot_15.xml  bot_16.xml  bot_17.xml  bot_18.xml  bot_2.xml  bot_3.xml  bot_5.xml  bot_7.xml  bot_8.xml  bot_9.xml
(+24 files in other folders)
